<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BreakRemaindar1</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_days">Click Here to Select Days..</string>
    <string name="breaktime">breaktime</string>
    <string name="save">save</string>
    <string name="_10_mins">10_mins</string>
    <string name="_50_mins">50_mins</string>
    <string name="breakinterval">breakinterval</string>
    <string name="start_time">start_time</string>
    <string name="_9_00_am">9_00_am</string>
    <string name="_5_00_pm">5_00_pm</string>
    <string name="break_end_time">break_end_time</string>

</resources>
